--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
 </head>
 
 <body>
-
+  <header>
+    <h1>Bookshelf Apps</h1>
+  </header>
+  <main>
+    <div class="container">
+      <h2>Input Buku Baru</h2>
+      <form>
+        <label for="judul">Judul</label>
+        <input type="text" name="judul" id="judul">
+        <label for="penulis">Penulis</label>
+        <input type="text" name="penulis" id="penulis">
+        <label for="tahun">Tahun</label>
+        <input type="number" name="tahun" id="tahun">
+        <label for="complete">
+          Selesai dibaca <input type="checkbox" name="complete" id="complete">
+        </label>
+        <input type="submit" value="Simpan Buku" id="submit">
+      </form>
+    </div>
+  </main>
 </body>
 
 </html>
