--- a/index.html
+++ b/index.html
@@ -28,6 +28,26 @@
         <input type="submit" value="Simpan Buku" id="submit">
       </form>
     </div>
+
+    <div class="container">
+      <div id="allbook">
+        <h2>Semua Buku</h2>
+        <section>
+          <h4>Safinnah</h4>
+          <h6>Imam An-nawawi</h6>
+          <p>800</p>
+          <div class="span">Read</div>
+          <div class="span">Unread</div>
+        </section>
+        <section>
+          <h4>Tijan</h4>
+          <h6>Ibrahim Albajuri</h6>
+          <p>900</p>
+          <div class="span">Read</div>
+          <div class="span">Unread</div>
+        </section>
+      </div>
+    </div>
   </main>
 
 
