--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     </div>
 
     <div class="container">
-      <div id="allbook">
-        <h2>Semua Buku</h2>
+      <div id="read" class="rak">
+        <h2>Rak buku selesai dibaca</h2>
         <section>
           <h4>Safinnah</h4>
           <h6>Imam An-nawawi</h6>
@@ -39,10 +39,13 @@
           <div class="span">Read</div>
           <div class="span">Unread</div>
         </section>
+      </div>
+      <div id="unread" class="rak">
+        <h2>Rak buku belum dibaca</h2>
         <section>
-          <h4>Tijan</h4>
-          <h6>Ibrahim Albajuri</h6>
-          <p>900</p>
+          <h4>Safinnah</h4>
+          <h6>Imam An-nawawi</h6>
+          <p>800</p>
           <div class="span">Read</div>
           <div class="span">Unread</div>
         </section>
