Menambahkan logic rak baca

--- a/index.html
+++ b/index.html
@@ -31,24 +31,22 @@
 
     <div class="container">
       <div id="read" class="rak">
-        <h2>Rak buku selesai dibaca</h2>
+        <!-- <h2>Rak buku selesai dibaca</h2>
         <section>
           <h4>Safinnah</h4>
           <h6>Imam An-nawawi</h6>
           <p>800</p>
           <div class="span">Read</div>
-          <div class="span">Unread</div>
-        </section>
+        </section> -->
       </div>
       <div id="unread" class="rak">
-        <h2>Rak buku belum dibaca</h2>
+        <!-- <h2>Rak buku belum dibaca</h2>
         <section>
           <h4>Safinnah</h4>
           <h6>Imam An-nawawi</h6>
           <p>800</p>
-          <div class="span">Read</div>
           <div class="span">Unread</div>
-        </section>
+        </section> -->
       </div>
     </div>
   </main>
