--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
   <main>
     <div class="container">
-      <h2>Input Buku Baru</h2>
+      <h1>Input Buku Baru</h1>
       <form>
         <label for="judul">Judul</label>
         <input type="text" name="judul" id="judul">
@@ -31,21 +31,27 @@
 
     <div class="container">
       <div id="read" class="rak">
-        <!-- <h2>Rak buku selesai dibaca</h2>
+        <!-- <h1>Rak buku selesai dibaca</h1>
         <section>
           <h4>Safinnah</h4>
           <h6>Imam An-nawawi</h6>
           <p>800</p>
-          <div class="span">Read</div>
+          <div class="btn">
+            btn#read-unread
+            btn#delete
+          </div>
         </section> -->
       </div>
       <div id="unread" class="rak">
-        <!-- <h2>Rak buku belum dibaca</h2>
+        <!-- <h1>Rak buku belum dibaca</h1>
         <section>
           <h4>Safinnah</h4>
           <h6>Imam An-nawawi</h6>
           <p>800</p>
-          <div class="span">Unread</div>
+          <div class="btn">
+            btn#read-unread
+            btn#delete
+          </div>
         </section> -->
       </div>
     </div>
